@@ -878,3 +878,7 @@
 2013-01-03  Jaehwan Kim
 
         * Fix the bug which the callbacks of the sub-object are added even if the sub-object is added the parent object.
+
+2012-01-03  Prince Dubey Kumar <prince.dubey@samsung.com>
+
+        * Fix gengrid region_show/bring_in and add test
